--- a/assets/scss/component/_section-title.scss
+++ b/assets/scss/component/_section-title.scss
@@ -330,7 +330,7 @@
         content: "";
         width: 40px;
         height: 1px;
-        background: var(--clr-theme-2);
+        background: #FFD700 !important;
         left: 130px;
         top: 50%;
         transform: translateY(-50%);
