--- a/assets/css/backToTop.css
+++ b/assets/css/backToTop.css
@@ -13,7 +13,7 @@
     transform: translateY(15px);
     -webkit-transition: all 200ms linear;
     transition: all 200ms linear;
-    background: var(--clr-theme-2);
+    background: #FFD700;
   }
   
   .progress-wrap.active-progress {
