--- a/assets/scss/component/_process.scss
+++ b/assets/scss/component/_process.scss
@@ -6,39 +6,34 @@
 // process style 
 
 .work-process-box {
+    position: relative;
+    z-index: 0;
     border: 1px solid #414141;
     padding: 50px 40px;
-    position: relative;
     overflow: hidden;
-    transition: 3s;
+    transition: 0.3s;
 
     &::before {
-        position: absolute;
         content: "";
-        left: 0;
+        position: absolute;
         top: 0;
-        background: linear-gradient(180deg, rgba(20, 207, 147, 0.8) 0%, #0D825C 100%);
-        transition: 0.3s;
-        opacity: 0;
-        visibility: hidden;
-        z-index: -1;
+        left: 0;
         height: 0;
         width: 100%;
-    }
-
-    @media (hover:none) {
-        border-color: transparent;
-        background: linear-gradient(180deg, rgba(20, 207, 147, 0.8) 0%, #0D825C 100%);
+        background: linear-gradient(180deg, rgba(255, 215, 0, 0.8) 0%, #FFD700 100%);
+        opacity: 0;
+        visibility: hidden;
+        transition: 0.3s ease;
+        z-index: -1;
     }
 
     &:hover {
         border-color: transparent;
 
         &::before {
+            height: 100%;
             opacity: 1;
             visibility: visible;
-            height: 100%;
-            bottom: auto;
         }
 
         p {
@@ -48,16 +43,20 @@
         .process__icon {
             background-color: #fff;
 
-        }
-
-        .process__icon img {
-            filter: brightness(2%);
+            img {
+                filter: brightness(2%);
+            }
         }
 
         .process__number {
             background-color: var(--clr-common-black);
             color: var(--clr-common-white);
         }
+    }
+
+    @media (hover: none) {
+        border-color: transparent;
+        background: linear-gradient(180deg, rgba(255, 215, 0, 0.8) 0%, #FFD700 100%);
     }
 
     .process {
@@ -68,12 +67,12 @@
             height: 99px;
             line-height: 99px;
             border-radius: 50%;
-            transition: .3s;
+            transition: 0.3s;
 
-            @media (hover:none) {
+            @media (hover: none) {
                 background-color: #fff;
 
-                &.process__icon img {
+                img {
                     filter: brightness(2%);
                 }
             }
@@ -85,7 +84,7 @@
             color: var(--clr-common-white);
             margin-bottom: 35px;
 
-            @media #{$xxs} {
+            @media (max-width: 576px) {
                 font-size: 26px;
             }
 
@@ -98,27 +97,25 @@
                     -webkit-text-stroke-color: #A5A5A5;
                     filter: drop-shadow(6px 0 0 #A5A5A5);
 
-                    @media #{$lg,$xxs} {
+                    @media (max-width: 992px), (max-width: 576px) {
                         font-size: 100px;
                     }
                 }
             }
-
         }
 
         &__number {
             position: absolute;
-            color: var(--clr-common-black);
             top: -5px;
             right: -5px;
-            content: "";
             width: 28px;
             height: 28px;
             line-height: 29px;
             border-radius: 50%;
             background: var(--clr-theme-2);
-            transition: .3s;
+            color: var(--clr-common-black);
             z-index: 1;
+            transition: 0.3s;
         }
     }
 
