--- a/assets/scss/component/_counter.scss
+++ b/assets/scss/component/_counter.scss
@@ -152,7 +152,7 @@
     display: inline-flex;
     justify-content: center;
     align-items: center;
-    color: var(--clr-theme-2);
+    color: #FFD700;
     border-radius: 50%;
     font-size: 38px;
     font-weight: 400;
