--- a/assets/scss/component/_services.scss
+++ b/assets/scss/component/_services.scss
@@ -269,7 +269,7 @@
                 content: "";
                 width: 20px;
                 height: 20px;
-                background: var(--clr-theme-2);
+                background: #FFD700;
                 right: 0px;
                 top: 0px;
 
