--- a/assets/scss/component/_project.scss
+++ b/assets/scss/component/_project.scss
@@ -503,7 +503,7 @@
     height: 1px;
     bottom: 0;
     left: 0px;
-    background-image: linear-gradient(90deg, var(--clr-theme-2) 0%, transparent 100%);
+    background-image: linear-gradient(90deg, #FFD700 0%, transparent 100%);
 }
 
 .project__sub-title span {
