--- a/assets/scss/component/_section-title.scss
+++ b/assets/scss/component/_section-title.scss
@@ -49,7 +49,7 @@
                             height: 1px;
                             bottom: 0;
                             left: 0;
-                            background-image: linear-gradient(90deg, var(--clr-theme-2) 0%, transparent 100%);
+                            background-image: linear-gradient(90deg, var(--clr-common-white) 0%, transparent 100%);
                         }
                     }
 
